remove the dependency on linuxPackages.nvidia_x11.bin
nvidia-smi depends on a specific version of the installed nvidia driver.
Specifying that it depends on linuxPackages.nvidia_x11.bin may cause
a mismatch between the nvidia driver and nvidia-smi.

I don't have a good solution for this problem other than explicitly
warning the user that they should have nvidia-smi available in the PATH.

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 As of 12 Nov 2023, ollama in nixpkgs fails to utilize CUDA-enabled devices.
 This repo contains a nix flake that defines ollama with CUDA support.
 
+# Make sure you have nvidia-smi available in the PATH before running the
+# following command.
 nix run github:havaker/ollama-nix
